src/test/ui/macros/macro-comma-behavior.std.stderr
error: 1 positional argument in format string, but no arguments were given
  --> $DIR/macro-comma-behavior.rs:27:23
   |
LL |     assert_eq!(1, 1, "{}",);
   |                       ^^

error: 1 positional argument in format string, but no arguments were given
  --> $DIR/macro-comma-behavior.rs:30:23
   |
LL |     assert_ne!(1, 2, "{}",);
   |                       ^^

error: 1 positional argument in format string, but no arguments were given
  --> $DIR/macro-comma-behavior.rs:36:29
   |
LL |     debug_assert_eq!(1, 1, "{}",);
   |                             ^^

error: 1 positional argument in format string, but no arguments were given
  --> $DIR/macro-comma-behavior.rs:39:29
   |
LL |     debug_assert_ne!(1, 2, "{}",);
   |                             ^^

error: 1 positional argument in format string, but no arguments were given
  --> $DIR/macro-comma-behavior.rs:44:18
   |
LL |         eprint!("{}",);
   |                  ^^

error: 1 positional argument in format string, but no arguments were given
  --> $DIR/macro-comma-behavior.rs:56:18
   |
LL |         format!("{}",);
   |                  ^^

error: 1 positional argument in format string, but no arguments were given
  --> $DIR/macro-comma-behavior.rs:60:19
   |
LL |     format_args!("{}",);
   |                   ^^

error: 1 positional argument in format string, but no arguments were given
  --> $DIR/macro-comma-behavior.rs:67:17
   |
LL |         print!("{}",);
   |                 ^^

error: 1 positional argument in format string, but no arguments were given
  --> $DIR/macro-comma-behavior.rs:78:21
   |
LL |     unimplemented!("{}",);
   |                     ^^

error: 1 positional argument in format string, but no arguments were given
  --> $DIR/macro-comma-behavior.rs:87:24
   |
LL |             write!(f, "{}",)?;
   |                        ^^

error: aborting due to 10 previous errors

